 modifications, as long as this notice is preserved.

 This program is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

		----------------------------------

ChangeLog about GNU GLOBAL

December 16 2016, Shigio YAMAGUCHI

	Rewrote the following CGI scripts using perl5 syntax:
	global.cgi.in
	completion.cgi.in

	There were many perl5.* incompatible with each other in the past.
	Even then perl4 syntax always worked correctly. But this problem
	was a thing of the past. Perl4 syntax is now meaningless.

October 22 2016, Shigio YAMAGUCHI

	Removed the following files:
	BOKIN_MODEL
	BOKIN_MODEL_FAQ

	BOKIN model was finished. Now GLOBAL is not a BOKINware.

October 8 2016, Shigio YAMAGUCHI

	Added the following library source code. Though it's a GNU version,
	I derived them from the latest Universal Ctags archive not to make
	differences.

        libglibc/fnmatch.c
        libglibc/fnmatch.h

March 9 2016, Shigio YAMAGUCHI

	Now, the following files in datadir are static.
	- completion.cgi
	- global.cgi
	- jscode_suggest
	- jscode_treeview
	- style.css

February 3 2016, Shigio YAMAGUCHI

	[Plug-in parser]
	Added new plug-in parser 'universal-ctags.la'.
	It is made using exuberant-ctags.c and -DUSE_EXTRA_FIELDS compile option.

	[gtags.conf]
	Added new entry 'universal-ctags'.
	Added new variables 'ctagscom'.

	[Plug-in interface]
	Added new plug-in interface function getconf().
	You can access config variables of gtags(1) from plug-in parsers.

Nov 30 2015, Shigio YAMAGUCHI

	Replaced @libdir_QUOTED@ with configuration variable in gtags.conf.in.

Nov 21 2015, Shigio YAMAGUCHI

	Removed ctags-5.8.patch, because Universal Ctags supports reference tags
	by itself now.
	Added new test for Universal Ctags.

Oct 14 2015, Shigio YAMAGUCHI

	[configure.ac]
	Replaced @prefix_QUOTED@ with @libdir_QUOTED@ in gtags.conf.in.